@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Mon Jul 27 14:29:32 CEST 2009
-build.number=39
+#Mon Jul 27 20:49:42 CEST 2009
+build.number=49
